# sport-analysis

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  test_color_augs.py  test_image.py  test_video.py  test_video_without_model.py  train.py
conf/: config.yaml  my_app.py
data/inference/: inference
model/: model
runs/: runs
src/: constants.py  demo.py  detect.py  frames2video.py  tracking.py  video2frames.py
src/data/: load_data.py  make_dataset.py
src/inference/: utils_instance.py  video_from_images.py
src/models/: decode.py  model.py  predict.py  utils.py
src/notebooks/: openpose.ipynb
src/options/: base_options.py
src/panorama/: img_stitch.py  pitch_wrapper.py
src/utils/: frames2video.py  video2frames.py
src/visualisation/: visualize.py
tests/: test_color_augs.py
